[bugfix] Hide top menu on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@ body {
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-width: 370px;
+  min-height: 470px;
 }
 
 code {
