--- a/src/shared/containers/app-header/AppHeader.scss
+++ b/src/shared/containers/app-header/AppHeader.scss
@@ -25,7 +25,7 @@
 
     @media screen and (max-width: 700px) {
       width: 0;
-      opacity: 0;
+      opacity: 0 !important;
       height: 0;
     }
   }
